# mac-desktop-notify

./: .gitignore  DynamicNotchKit-llms.txt  Package.resolved  Package.swift  README.md  boring.notch-llms.txt  build_app.sh  notify.http  overall.md
Sources/AtollExtensionKit/: AtollClient.swift  AtollExtensionKit.swift
Sources/AtollUI/: AtollDefaults.swift  AtollEnums.swift  DynamicIslandAnimations.swift  DynamicIslandContainerView.swift  DynamicIslandPillShape.swift  DynamicIslandViewCoordinator.swift  DynamicIslandViewModel.swift  DynamicIslandWindow.swift  DynamicIslandWindowController.swift  NotchShape.swift  Sizing.swift
Sources/IslandAnimationCore/: EasingCurve.swift  IslandAnimationProfile.swift  IslandAnimationSettings.swift  IslandFrame.swift  SpringSolver.swift
Sources/MacDesktopNotify/: APIServer.swift  ActionDispatcher.swift  AppConfig.swift  AppDelegate.swift  AppSettings.swift  EventMonitors.swift  Ext+NSPasteboard.swift  Ext+NSScreen.swift  Info.plist  IslandDisplayState.swift  IslandGeometry.swift  MarkdownNotificationView.swift  MarkdownRenderer.swift  NotchNotification.swift  NotchPresenter.swift  main.swift  (+5 more)
desktop-notify-tauri/: DESIGN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
desktop-notify-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-notify-tauri/src-tauri/capabilities/: default.json
desktop-notify-tauri/src-tauri/icons/: icon.icns
desktop-notify-tauri/src-tauri/src/: callback.rs  glass.rs  lib.rs  models.rs  server.rs  settings.rs  state.rs  tray.rs
scripts/: generate_app_icon.py
(+137 files in other folders)
