[package]
name = "app"
version = "0.1.0"
description = "Desktop Notify — cross-platform notification center"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "tray-icon", "image-png"] }

# async runtime + http server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"

# serialization / data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# callbacks
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-store = "2.4.3"
tauri-plugin-shell = "2"

# macOS 26 Liquid Glass / vibrancy 原生窗口材质
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7"
